create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1375,12 +1375,12 @@ body {
 }
 .cid-r0q75YpiC1 .navbar {
   padding: .5rem 0;
-  background: #7f1933;
+  background: #252525;
   transition: none;
   min-height: 77px;
 }
 .cid-r0q75YpiC1 .navbar-dropdown.bg-color.transparent.opened {
-  background: #7f1933;
+  background: #252525;
 }
 .cid-r0q75YpiC1 a {
   font-style: normal;
@@ -1464,7 +1464,7 @@ body {
   padding-bottom: 0;
 }
 .cid-r0q75YpiC1 .dropdown .dropdown-menu {
-  background: #7f1933;
+  background: #252525;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1535,7 +1535,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #000000;
+  background-color: #82786e;
 }
 .cid-r0q75YpiC1 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1947,12 +1947,12 @@ body {
 }
 .cid-r0rMKJxzwn .navbar {
   padding: .5rem 0;
-  background: #7f1933;
+  background: #252525;
   transition: none;
   min-height: 77px;
 }
 .cid-r0rMKJxzwn .navbar-dropdown.bg-color.transparent.opened {
-  background: #7f1933;
+  background: #252525;
 }
 .cid-r0rMKJxzwn a {
   font-style: normal;
@@ -2036,7 +2036,7 @@ body {
   padding-bottom: 0;
 }
 .cid-r0rMKJxzwn .dropdown .dropdown-menu {
-  background: #7f1933;
+  background: #252525;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2107,7 +2107,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #000000;
+  background-color: #82786e;
 }
 .cid-r0rMKJxzwn button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2573,12 +2573,12 @@ body {
 }
 .cid-r0q75YpiC1 .navbar {
   padding: .5rem 0;
-  background: #7f1933;
+  background: #252525;
   transition: none;
   min-height: 77px;
 }
 .cid-r0q75YpiC1 .navbar-dropdown.bg-color.transparent.opened {
-  background: #7f1933;
+  background: #252525;
 }
 .cid-r0q75YpiC1 a {
   font-style: normal;
@@ -2662,7 +2662,7 @@ body {
   padding-bottom: 0;
 }
 .cid-r0q75YpiC1 .dropdown .dropdown-menu {
-  background: #7f1933;
+  background: #252525;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2733,7 +2733,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #000000;
+  background-color: #82786e;
 }
 .cid-r0q75YpiC1 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2962,12 +2962,12 @@ body {
 }
 .cid-r0q75YpiC1 .navbar {
   padding: .5rem 0;
-  background: #7f1933;
+  background: #252525;
   transition: none;
   min-height: 77px;
 }
 .cid-r0q75YpiC1 .navbar-dropdown.bg-color.transparent.opened {
-  background: #7f1933;
+  background: #252525;
 }
 .cid-r0q75YpiC1 a {
   font-style: normal;
@@ -3051,7 +3051,7 @@ body {
   padding-bottom: 0;
 }
 .cid-r0q75YpiC1 .dropdown .dropdown-menu {
-  background: #7f1933;
+  background: #252525;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3122,7 +3122,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #000000;
+  background-color: #82786e;
 }
 .cid-r0q75YpiC1 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
