create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2498,6 +2498,10 @@ body {
   width: auto;
   max-width: 600px;
 }
+.cid-r0v3kbDjNK P {
+  color: #efefef;
+  text-align: left;
+}
 .cid-r0rMKNQ641 {
   padding-top: 45px;
   padding-bottom: 45px;
