--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3713,193 +3713,88 @@ body {
 .cid-r0x9gOfpre .mbr-section-subtitle {
   color: #767676;
 }
-.cid-r0x9gOK6dB {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-r0x9gOK6dB .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-r0x9gPdUD1 {
-  padding-top: 0px;
-  padding-bottom: 15px;
-  background-color: #ffffff;
-}
-.cid-r0x9gPdUD1 .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-r0x9gPdUD1 .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-r0x9gPdUD1 .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-r0x9gPdUD1 .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-r0x9gPdUD1 .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #554346;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-}
-.cid-r0x9gPdUD1 .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-r0x9gPdUD1 .mbr-gallery-item > div:hover:before {
-  opacity: 0.7 !important;
-}
-.cid-r0x9gPdUD1 .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-r0x9gPdUD1 .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #554346 !important;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-  opacity: 0.7;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
+.cid-r0x9gOfpre H2 {
+  color: #465052;
 }
 .cid-r0x9gQdYDw {
-  padding-top: 60px;
-  padding-bottom: 0px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-r0x9gQdYDw .mbr-section-subtitle {
   color: #232323;
 }
-.cid-r0x9gQJ5OS {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
+.cid-r0x9gQdYDw B {
+  color: #767676;
 }
-.cid-r0x9gQJ5OS h2 {
-  text-align: center;
+.cid-r0AZDsVHr8 {
+  padding-top: 30px;
+  padding-bottom: 45px;
+  background-color: #f1fcff;
 }
-.cid-r0x9gQJ5OS h4 {
-  text-align: center;
-  z-index: 1;
-  color: #ffffff;
+@media (min-width: 992px) {
+  .cid-r0AZDsVHr8 .mbr-figure {
+    padding-right: 4rem;
+  }
 }
-.cid-r0x9gQJ5OS p {
-  z-index: 1;
-  margin-bottom: 0;
-  color: #ffffff;
+@media (max-width: 991px) {
+  .cid-r0AZDsVHr8 .mbr-figure {
+    padding-bottom: 3rem;
+  }
 }
-.cid-r0x9gQJ5OS .media-container-row {
-  word-wrap: break-word;
-  word-break: break-word;
-  align-items: stretch;
-  -webkit-align-items: stretch;
+@media (max-width: 767px) {
+  .cid-r0AZDsVHr8 .mbr-text {
+    text-align: center;
+  }
 }
-.cid-r0x9gQJ5OS .card-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-}
-.cid-r0x9gQJ5OS .card-img img {
-  z-index: -1;
-  min-height: 100%;
-  min-width: 100%;
-  width: auto;
-  max-width: 600px;
-}
-.cid-r0x9gQJ5OS P {
-  color: #efefef;
+.cid-r0AZDsVHr8 H1 {
   text-align: left;
+  color: #0c5b8e;
 }
-.cid-r0x9gRBzrx {
-  padding-top: 0px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-r0x9gRBzrx .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-r0x9gS23HL {
-  padding-top: 60px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-r0x9gS23HL .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-r0x9gSyaHa {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-r0x9gSyaHa .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-r0x9gT1aj6 {
-  padding-top: 0px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-r0x9gT1aj6 h2 {
-  text-align: center;
-}
-.cid-r0x9gT1aj6 h4 {
-  text-align: center;
-  z-index: 1;
-  color: #ffffff;
-}
-.cid-r0x9gT1aj6 p {
-  z-index: 1;
-  margin-bottom: 0;
-  color: #ffffff;
-}
-.cid-r0x9gT1aj6 .media-container-row {
-  word-wrap: break-word;
-  word-break: break-word;
-  align-items: stretch;
-  -webkit-align-items: stretch;
-}
-.cid-r0x9gT1aj6 .card-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-}
-.cid-r0x9gT1aj6 .card-img img {
-  z-index: -1;
-  min-height: 100%;
-  min-width: 100%;
-  width: auto;
-  max-width: 600px;
-}
-.cid-r0x9gT1aj6 P {
-  color: #646464;
+.cid-r0AZDsVHr8 .mbr-text,
+.cid-r0AZDsVHr8 .mbr-section-btn {
   text-align: left;
+  color: #073b4c;
+}
+.cid-r0AZDsVHr8 B {
+  color: #333333;
+}
+.cid-r0B6hDE8aA {
+  padding-top: 30px;
+  padding-bottom: 45px;
+  background-color: #fff1f1;
+}
+.cid-r0B6hDE8aA .media-container-row {
+  flex-direction: row-reverse;
+}
+@media (min-width: 992px) {
+  .cid-r0B6hDE8aA .mbr-figure {
+    padding-right: 4rem;
+    padding-right: 0;
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-r0B6hDE8aA .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-r0B6hDE8aA .mbr-text {
+    text-align: center;
+  }
+}
+.cid-r0B6hDE8aA H1 {
+  text-align: right;
+  color: #a13535;
+}
+.cid-r0B6hDE8aA .mbr-text,
+.cid-r0B6hDE8aA .mbr-section-btn {
+  text-align: right;
+  color: #570e21;
+}
+.cid-r0B6hDE8aA B {
+  color: #333333;
 }
 .cid-r0x9gTLe0y {
   padding-top: 45px;
