--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3081,6 +3081,26 @@ body {
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
 }
+.cid-r2wHcF2z7M {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-r2wHcF2z7M .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-r2wC8cmRvZ {
+  background: #ffffff;
+}
+.cid-r2wC8cmRvZ .video-block {
+  margin: auto;
+  width: 100% !important;
+}
+@media (max-width: 768px) {
+  .cid-r2wC8cmRvZ .video-block {
+    width: 100% !important;
+  }
+}
 .cid-r0wcUE4auB {
   padding-top: 60px;
   padding-bottom: 0px;
