--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1875,7 +1875,7 @@ body {
 .cid-r2wKQulrQO {
   padding-top: 90px;
   padding-bottom: 45px;
-  background-color: #ff7f9f;
+  background-color: #efefef;
 }
 .cid-r2wKQulrQO .media-container-row {
   flex-direction: row-reverse;
